chamber/styles/chamber.css
:root {
    --clr-primary: #d51b1b;
    --clr-accent: #1b7ed5;
    --bck-clr: #fff;
    --bck-clr-accent: #eee;
    --font-heading: 'Roboto', Arial, sans-serif;
    --font-text: Times, 'Times New Roman', serif;
}

/* Body styles */
body {
    font-family: var(--font-text);
}

h1,
h2,
h3 {
    font-family: var(--font-heading);
}

h1 {
    width: fit-content;

    margin: 0 auto 1rem;
    padding: .1rem .3rem;

    text-align: center;
    color: var(--clr-primary);
    border-bottom: 2px solid var(--clr-primary);
}

p {
    margin: 0;
}

a {
    color: var(--clr-primary);
    text-decoration: none;
}

a:hover {
    color: var(--clr-accent);
    text-decoration: underline;
}

/* Header styles */
header {
    display: flex;
    justify-content: space-between;
    align-items: center;

    padding: .5rem 1rem;
    margin-bottom: 2rem;

    border-bottom: 3px solid var(--clr-primary);
}

header span {
    font-family: var(--font-heading);
    font-size: 1.4rem;
    text-align: center;

    color: var(--clr-primary);
}

header,
footer {
    background-color: var(--bck-clr);
}

/* Footer styles */
footer {
    display: flex;
    flex-direction: column;
    /* align-items: flex-start; */
    align-items: center;
    gap: 1rem;

    padding: .5rem 1rem;
    margin-top: 2rem;

    border-top: 3px solid var(--clr-primary);
}

.contact,
.social-media,
.copyright {
    width: 225px;
}

footer p {
    margin: .5rem 0;
}

.social-media {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1rem;
}

/* Navigation styles */
.navigation {
    display: flex;
    flex-direction: column;
    border: none;
    border-radius: .5rem;
    padding: 0;
}

.navigation ul {
    margin: 0;
    padding: .5rem 1rem;
    list-style: none;
}

.navigation.show {
    background-color: var(--bck-clr);
    border: 2px solid var(--clr-primary);

    position: absolute;
    right: 0;
    z-index: 10;
    margin-top: 170px;
    margin-right: 16px;
}

.navigation li {
    display: none;
    list-style: none;
    border: none;
}

.show li {
    display: block;
    text-align: left;

    padding: .2rem 0;
}

/* Hamburger menu styles */
#menu {
    display: block;
}

#menu::before {
    content: '≡';
    font-size: 2rem;
    font-weight: 700;
    line-height: 1;

    color: var(--clr-primary);
    border: 2px solid var(--clr-primary);
    border-radius: .5rem;

    width: 2.5rem;
    height: 2.5rem;

    display: inline-flex;
    align-items: center;
    justify-content: center;
}

#menu:hover:before {
    color: var(--clr-accent);
    border-color: var(--clr-accent);
}

#menu.show::before {
    content: '×';
}

/* List Menu styles */
.list-menu {
    margin: 0 auto;
    text-align: center;

    width: fit-content;

    font-size: 1.2rem;
}

/* Card  grid styles */
.grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    gap: 1rem;

    width: 90%;

    margin: 0 auto;
}

.grid .card {
    display: flex;
    flex-direction: column;
    align-items: center;

    max-width: 400px;
    width: 80%;

    border: 1px solid var(--clr-accent);
    border-radius: .5rem;

    padding: .5rem 1rem;
    margin: 1rem auto;

    background-color: var(--bck-clr-accent);
}

.grid .card img {
    display: block;
    margin: 0 auto 1rem;
}

.grid .card h2,
.grid .card a {
    text-align: center;
}

.grid .card p {
    width: 170px;

    margin-bottom: 1rem;
    text-align: left;
}

.grid .card a {
    margin-top: auto;
    margin-bottom: .5rem;
    padding: .1rem .3rem;

    border: 2px solid var(--clr-primary);
    border-radius: .5rem;
}

.grid .card a:hover {
    text-decoration: none;
    border-color: var(--clr-accent);
}

.grid .card .address,
.list .card .address {
    margin: 0;
}

.grid .card .phone {
    margin-top: 1rem;
}

/* Card list styles */
.list {
    display: flex;
    flex-direction: column;
}

.list .card {
    display: block;
    margin: 0 2rem;
    padding: 0.25rem;
}

.list .card img {
    display: none;
}

.list .card p,
.list .card a {
    margin-bottom: .5rem;
}

.list .card .phone {
    margin-top: .5rem;
}

